--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,20 +52,24 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Terraform init
+        working-directory: terraform
         run: terraform init
 
       - name: Setup TFLint
         uses: terraform-linters/setup-tflint@v6
 
       - name: TFLint
+        working-directory: terraform
         run: tflint --init && tflint
 
       - name: Terraform fmt & validate
+        working-directory: terraform
         run: |
           terraform fmt -check
           terraform validate
 
       - name: Terraform Plan
+        working-directory: terraform
         run: terraform plan 
 
 
