--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,6 +74,6 @@ jobs:
 
       - name: Terraform Plan
         working-directory: Terraform
-        run: terraform plan 
+        run: terraform plan -lock=false
 
 
