bypass state locking in CD

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -40,9 +40,9 @@ jobs:
       - name: Terraform Apply
         working-directory: Terraform
         if: github.event.inputs.action == 'apply'
-        run: terraform apply -var="container_image=${{ secrets.ECR_REGISTRY }}/ecs-threat-model-app:${{ github.event.inputs.image_tag }}" -auto-approve
+        run: terraform apply -var="container_image=${{ secrets.ECR_REGISTRY }}/ecs-threat-model-app:${{ github.event.inputs.image_tag }}" -auto-approve -lock=false
 
       - name: Terraform Destroy
         working-directory: Terraform
         if: github.event.inputs.action == 'destroy'
-        run: terraform destroy -auto-approve
+        run: terraform destroy -auto-approve 
