--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -45,4 +45,4 @@ jobs:
       - name: Terraform Destroy
         working-directory: Terraform
         if: github.event.inputs.action == 'destroy'
-        run: terraform destroy -auto-approve 
+        run: terraform destroy -auto-approve -lock=false
